fixed cloud spacing

--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ li {
 .test {
   position: absolute;
   right: 0%;
-  top: 20%;
+  top: 10em;
 }
 
 .person {
